--- a/demo/animate-box-shadow/index.html
+++ b/demo/animate-box-shadow/index.html
@@ -14,14 +14,14 @@
   <meta property="og:image:height" content="627">
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@tobiasahlin" />
-  <meta name="twitter:creator" content="@tobiasahlin" />
+  <meta name="twitter:site" content="@m_kiplagat" />
+  <meta name="twitter:creator" content="@m_kiplagat" />
 
   <meta name="description" content="How to animate box-shadow without crippling performance" />
   <meta name="keywords" content=", tobias ahlin, github, spotify, hyper island" />
 
   <title>
-    Demo: Animate box-shadow | Tobias Ahlin
+    Demo: Animate box-shadow | Samuel Kiplagat
   </title>
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
   <link rel="alternate" type="application/rss+xml"  href="../../feed.xml" title="Blog RSS Feed">
