--- a/speaking/index.html
+++ b/speaking/index.html
@@ -197,16 +197,16 @@
     <img src="../images/speaking/companies/nordic-design.png" alt="Nordic.Design" width="220">
   </div>
 
-  <p>Today, as speaking opportunities have started taking me all over the world, from northern Finland and Bucharest to Madison, Wisconsin, I meet thousands of brilliant minds that teach me more about my profession and myself, and they're inspiring me to study harder and think more critically about product development and creativity than ever before.</p>
+  <p>Today, as speaking opportunities have started taking me all over the world, from northern Nairobi and Eldoret to Cape Town, South Africa, I meet thousands of brilliant minds that teach me more about my profession and myself, and they're inspiring me to study harder and think more critically about product development and creativity than ever before.</p>
 
   <p>In my talks and workshops I talk about how to deal with the rapid innovation that’s changing our society (<span class="underlined underlined-short">digital transformation, how education needs to change, and how to build innovative and creative cultures</span>) all the way down to the nitty gritty details of building successful products; <span class="underlined">data driven design, idea and risk management, creativity, decision making in groups, and product design.</span> I use the stories from Spotify, GitHub and Minecraft to weave a story around my learnings, and make a point of grounding my advice in sound academic research.</p>
 
   <p><a href="mailto:hello@tobiasahlin.com" class="underlined">If you’re interested in having me speak or host a workshop at your event or conference, please feel free to reach out.</a> I’d love to work with you.</p>
 
   <p>Sincerely,<br>
-  <span class="signature">Tobias Ahlin</span></p>
+  <span class="signature">Samuel Kiplagat</span></p>
 
-  <p class="text-highlighted"><a href="mailto:hello@tobiasahlin.com">hello@tobiasahlin.com</a></p>
+  <p class="text-highlighted"><a href="mailto:hello@tobiasahlin.com">sammimaraba99@gmail.com</a></p>
 
 </div>
 
@@ -214,12 +214,12 @@
   <h2 class="section-header">Say hi.</h2>
 
   <div class="contact-info">
-    <a class="grid-item-header grid-item-header-left" href="mailto:hello@tobiasahlin.com">hello@<br>tobiasahlin.com</a>
+    <a class="grid-item-header grid-item-header-left" href="mailto:hello@tobiasahlin.com">sammimaraba99@gmail.com</a>
 
     <div class="grid-item-divider grid-item-divider-left"></div>
-    <p class="grid-item-text grid-item-text-left">I love to design and make things. I speak, teach, and consult at tech companies and startups, e.g. Spotify, Minecraft, GitHub, and Hyper Island. <a href="https://twitter.com/tobiasahlin">Say hi!</a><br><br>
+    <p class="grid-item-text grid-item-text-left">I love to design and make things. I speak, teach, and consult at tech companies and startups, e.g. Spotify, Minecraft, GitHub, and Hyper Island. <a href="https://twitter.com/m_kiplagat">Say hi!</a><br><br>
 
-    Tobias Ahlin Bjerrome <br>Stockholm, Sweden</p>
+    Sammy Kiplagat Maraba <br>Nairobi, Kenya</p>
 
     <div class="contact-links">
       <a class="contact-link" href="https://github.com/tobiasahlin" aria-label="View my GitHub profile"><span class="contact-icon"><svg class="case-item-icon icon-github" fill="#fff" xmlns="http://www.w3.org/2000/svg" width="62" height="60" viewBox="0 0 62 60"><path d="M31 0a30.7 30.7 0 0 0-9.8 59.9c1.55.3 2.116-.6 2.116-1.4s-.026-2.7-.042-5.3c-8.622 1.9-10.44-4.1-10.44-4.1-1.414-3.5-3.448-4.5-3.448-4.5-2.815-1.9.213-1.9.213-1.9a6.74 6.74 0 0 1 4.746 3.2c2.766 4.7 7.254 3.3 9.023 2.6a6.3 6.3 0 0 1 1.966-4.1c-6.88-.8-14.12-3.5-14.12-15.2a11.964 11.964 0 0 1 3.193-8.3 10.9 10.9 0 0 1 .3-8.1s2.6-.9 8.525 3.1a30.617 30.617 0 0 1 15.522 0c5.92-4 8.517-3.1 8.517-3.1a10.886 10.886 0 0 1 .308 8.1 11.946 11.946 0 0 1 3.186 8.3c0 11.8-7.248 14.4-14.155 15.1a7.52 7.52 0 0 1 2.1 5.7c0 4.1-.04 7.5-.04 8.5 0 .8.56 1.7 2.13 1.4A30.708 30.708 0 0 0 31 0"/></svg></span></a>
