--- a/speaking/index.html
+++ b/speaking/index.html
@@ -197,7 +197,7 @@
     <img src="../images/speaking/companies/nordic-design.png" alt="Nordic.Design" width="220">
   </div>
 
-  <p>Today, as speaking opportunities have started taking me all over the world, from northern Nairobi and Eldoret to Cape Town, South Africa, I meet thousands of brilliant minds that teach me more about my profession and myself, and they're inspiring me to study harder and think more critically about product development and creativity than ever before.</p>
+  <p>Today, as speaking opportunities have started taking me all over the world, from Nairobi and Eldoret to Cape Town, South Africa, I meet thousands of brilliant minds that teach me more about my profession and myself, and they're inspiring me to study harder and think more critically about product development and creativity than ever before.</p>
 
   <p>In my talks and workshops I talk about how to deal with the rapid innovation that’s changing our society (<span class="underlined underlined-short">digital transformation, how education needs to change, and how to build innovative and creative cultures</span>) all the way down to the nitty gritty details of building successful products; <span class="underlined">data driven design, idea and risk management, creativity, decision making in groups, and product design.</span> I use the stories from Spotify, GitHub and Minecraft to weave a story around my learnings, and make a point of grounding my advice in sound academic research.</p>
 
