--- a/spinkit/index.html
+++ b/spinkit/index.html
@@ -64,7 +64,7 @@
 <div class="site-nav-overlay js-nav">
   <div class="nav-content">
     <div class="js-nav-header nav-header">
-      <span class="nav-header-text">Tobias Ahlin</span>
+      <span class="nav-header-text">Britabinc Consultancy Firm</span>
       <div class="nav-header-line js-nav-header-line"></div>
     </div>
 
@@ -1089,7 +1089,7 @@
 <a id="next" class="navigation-arrow"><img src="../images/spinners/arrow.svg" alt="" width="28" height="42" /></a>
   
 <footer>
-  <a href="http://twitter.com/tobiasahlin" class="profile-link">by <strong>@tobiasahlin</strong><span class="additional-info"> with ❤</span><span class="underline"></span></a>
+  <a href="http://twitter.com/tobiasahlin" class="profile-link">by <strong>@m_kiplagat</strong><span class="additional-info"> with ❤</span><span class="underline"></span></a>
   
   <ul class="pagination">
     <li><a class="selected" href="index.html#"><span></span></a></li>
