--- a/moving-letters/index.html
+++ b/moving-letters/index.html
@@ -60,7 +60,7 @@
 <div class="site-nav-overlay js-nav">
   <div class="nav-content">
     <div class="js-nav-header nav-header">
-      <span class="nav-header-text">Tobias Ahlin</span>
+      <span class="nav-header-text">BritabInc Consultancy Firm</span>
       <div class="nav-header-line js-nav-header-line"></div>
     </div>
 
@@ -1365,10 +1365,10 @@ ml.timelines["ml16"] = anime.timeline({loop: true})
 
   <div class="collection-footer-box collection-footer-profile">
     <img src="../images/profile-white@2x.jpg" alt="Photo of Tobias" width="102" class="collection-profile-image">
-    <h2 class="collection-inline-header collection-inline-header-w-subheader"><a href="https://twitter.com/tobiasahlin">By Tobias Ahlin</a></h2>
-    <a class="collection-twitter-link" href="https://twitter.com/tobiasahlin">@tobiasahlin</a>
+    <h2 class="collection-inline-header collection-inline-header-w-subheader"><a href="https://twitter.com/tobiasahlin">By Samuel Kiplagat</a></h2>
+    <a class="collection-twitter-link" href="https://twitter.com/tobiasahlin">@m_kiplagat</a>
     <p>Letter animation code is free to use, licensed under <a href="https://opensource.org/licenses/MIT">MIT</a>. Site design 
-&amp; code © Tobias Ahlin, 2021.</p>
+&amp; code © Samuel Kiplagat, 2021.</p>
   </div>
 
   <div class="collection-footer-divider"></div>
