--- a/spinkit/index.html
+++ b/spinkit/index.html
@@ -64,7 +64,7 @@
 <div class="site-nav-overlay js-nav">
   <div class="nav-content">
     <div class="js-nav-header nav-header">
-      <span class="nav-header-text">Britabinc Consultancy Firm</span>
+      <span class="nav-header-text">BritabInc Consultancy Firm</span>
       <div class="nav-header-line js-nav-header-line"></div>
     </div>
 
