--- a/typesource.1.html
+++ b/typesource.1.html
@@ -1748,11 +1748,11 @@
 <div class="collection-footer-info">
 
   <div class="collection-footer-box collection-footer-profile">
-    <img src="images/profile-white@2x.jpg" alt="Photo of Tobias" width="102" class="collection-profile-image">
-    <h2 class="collection-inline-header collection-inline-header-w-subheader"><a href="https://twitter.com/tobiasahlin">By Tobias Ahlin</a></h2>
-    <a class="collection-twitter-link" href="https://twitter.com/tobiasahlin">@tobiasahlin</a>
+    <img src="images/profile.jpeg" alt="Photo of Samuel" width="102" class="collection-profile-image">
+    <h2 class="collection-inline-header collection-inline-header-w-subheader"><a href="https://twitter.com/tobiasahlin">By Samuel Kiplagat</a></h2>
+    <a class="collection-twitter-link" href="https://twitter.com/m_kiplagat">@m_kiplagat</a>
     <p>Text compositions are free to use, licensed under <a href="https://opensource.org/licenses/MIT">MIT</a>. Site design 
-&amp; code © Tobias Ahlin, 2021.</p>
+&amp; code © Samuel Kiplagat, 2021.</p>
   </div>
 
   <div class="collection-footer-divider"></div>
